--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,22 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Showing images </title>
-
-</head> 
+    <title>ALU Web Development</title>
+</head>
 <body>
+    <header>
+        <ul>
+            <li>
+                <a href="tweets.html">Tweet Page</a>
+            </li>
+        </ul>
+        <h1>Welcome to My Image Gallery</h1>
+    </header>
 
-<h1>My First Website</h1>
+    <main>
+        <section>
+            <h2>Introduction</h2>
+            <p>
+                Embarking on a journey as a frontend developer is both thrilling and challenging. The process of transforming design ideas into interactive websites is a rewarding experience, though it comes with its set of hurdles, especially with HTML, CSS, and JavaScript. Each project helps in honing my skills, understanding browser nuances, and solving problems, leading to a richer and more confident approach to web development.
+            </p>
+        </section>
 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt repudiandae quibusdam, est iste eum sequi laborum debitis, expedita illum obcaecati ipsam molestiae labore quia quas provident unde amet perferendis beatae.</p>
+        <section>
+            <h3>Goals and Aspirations</h3>
+            <p>
+                As I progress in frontend development, I aim to gain deeper expertise in crafting smooth, high-performance web applications. My goal is to tackle complex technical issues with ease, design innovative user experiences, and enhance performance across various devices. I am excited about the prospect of leading development projects, guiding newcomers, and influencing future web technologies to create impactful and user-friendly solutions.
+            </p>
+        </section>
 
-<h2>The experience</h2>
+        <figure>
+            <img src="https://www.shutterstock.com/shutterstock/photos/241899433/display_1500/stock-vector-distance-online-learning-symbol-vector-illustration-eps-241899433.jpg" alt="Online Learning Illustration">
+            <figcaption>An illustration symbolizing online learning and development.</figcaption>
+        </figure>
+    </main>
 
-<p>As I begin my journey as a frontend developer, I am filled with excitement and a bit of trepidation. The thrill of turning design concepts into fully functional websites is invigorating, though I often face challenges with HTML, CSS, and JavaScript. Each debugging session teaches me more about browser compatibility and problem-solving, enhancing my technical skills and confidence. Every project I complete is a step forward in my growth, blending creativity with practical experience.</p>
+    <aside>
+        <!-- Placeholder for additional content or comments -->
+        <p>Placeholder for future updates or interactive features.</p>
+    </aside>
 
-<h3>What i expect</h3>
-<p>As I advance to an expert level in frontend development, I anticipate a deeper mastery of creating seamless, high-performing web experiences. I expect to effortlessly handle complex technical challenges, design innovative user interfaces, and optimize performance across diverse platforms. I look forward to leading projects, mentoring junior developers, and influencing the direction of web technologies. Ultimately, I envision contributing to cutting-edge solutions that shape the future of user interactions on the web.</p>
-<img src="https://media.istockphoto.com/id/1356364287/photo/close-up-focus-on-persons-hands-typing-on-the-desktop-computer-backlit-keyboard-screens-show.jpg?s=612x612&w=0&k=20&c=ijjq-DLNxIaPuGvIX8k06IZxMAjGpyJeboaV_byCX9k=" alt="">
+    <footer>
+        <p>
+            Created by Olivier Ishimwe - <a href="https://www.shutterstock.com/" target="_blank">Visit Shutterstock</a>
+        </p>
+    </footer>
 </body>
-
 </html>
